--- a/vignettes/Status.Rmd
+++ b/vignettes/Status.Rmd
@@ -21,7 +21,7 @@ This page will be updated frequently with information about the status of dataRe
 
 ### NWIS qw services
 
-Discrete water samples data are undergoing modernization, and NWIS services will no longer be updated with the latest data starting late February 2024, with a full decommission expected 6 months later. Learn more about the upcoming change and where to find the new samples data in our [blog](https://waterdata.usgs.gov/blog/changes-to-sample-data/).
+Discrete water samples data are undergoing modernization, and NWIS services will no longer be updated with the latest data starting mid-March 2024, with a full decommission expected 6 months later. Learn more about the upcoming change and where to find the new samples data in our [blog](https://waterdata.usgs.gov/blog/changes-to-sample-data/).
 
 
 If you have additional questions about the qw data service, email CompTools@usgs.gov.
@@ -29,9 +29,9 @@ If you have additional questions about the qw data service, email CompTools@usgs
 
 ### WQP: USGS Data
 
-Limited availability of **new** USGS data: starting late February 2024, there will be a period when new USGS data will not be accessible on the Water Quality Portal. Data will still be collected but will not be publicly available. This limited availability is expected to last a few weeks.
+Limited availability of **new** USGS data: starting mid-March accessible on the Water Quality Portal. Data will still be collected but will not be publicly available. This limited availability is expected to last a few weeks.
 
-New USGS data will be accessible again upon release of the new Data Profiles, which will be in the WQX 3.0 format. These profiles should be available starting late March 2024.
+New USGS data will be accessible again upon release of the new Data Profiles, which will be in the WQX 3.0 format. These profiles should be available starting April 2024.
 
 These profiles are not yet available to test. When they are, we will update this page with recommendations.
  
@@ -45,7 +45,7 @@ These profiles are not yet available to test. When they are, we will update this
 
 Functioning normally, includes new data. This function will be going away soon, so consider switching to `readWQPqw` or `readWQPdata`. When the NWIS qw service is eventually shut down - the `readNWISqw` will be removed from dataRetrieval. 
 
-### Late February 2024
+### March 2024
 
 When the NWIS services are "frozen": the returned data will not include any new data. 
 
@@ -61,9 +61,9 @@ See `vignette("qwdata_changes", package = "dataRetrieval")` for information on h
 
 Functioning normally, includes information on all available data. 
 
-### Late February 2024
+### March 2024
 
-When the NWIS services are "frozen" (late February): the returned data availability will also be frozen ONLY for "qw" data_type_cd results. All other data types should not be affected. 
+When the NWIS services are "frozen" (mid-March): the returned data availability will also be frozen ONLY for "qw" data_type_cd results. All other data types should not be affected. 
 
 ### Fall 2024
 
@@ -79,7 +79,7 @@ nrow(what_NWIS[what_NWIS$data_type_cd == "qw",])
 [1] 381
 ```
 
-So for site "05114000", there are 381 NWIS qw parameters that have been measured. Starting late February 2024, the data availability for those 381 parameters will be frozen...even if new data is collected. Eventually those 381 rows of data will not be returned, only 26 rows of data will be returned (407-381). 
+So for site "05114000", there are 381 NWIS qw parameters that have been measured. Starting mid-March 2024, the data availability for those 381 parameters will be frozen...even if new data is collected. Eventually those 381 rows of data will not be returned, only 26 rows of data will be returned (407-381). 
 
 Once the full transition is completed, we will update with additional guidance. Water Quality Portal data availability can be obtained:
 
@@ -105,17 +105,17 @@ You'll notice that there are fewer rows in the `what_WQP` data frame (203) than 
 
 Functioning normally, includes all available USGS data. The Water Quality Portal does not yet include new "WQX 3.0" profiles. 
 
-### Late February 2024
+### March 2024
 
-When the NWIS services are "frozen" (late February): no new USGS will be available via any Water Quality Portal query. 
+When the NWIS services are "frozen" (mid-March): no new USGS will be available via any Water Quality Portal query. 
 
 ### Fall 2024
 
 When the NWIS services are decommissioned (possible September 2024): Should not affect WQP functions.
 
-### March/April 2024
+### April 2024
 
-When WQP gets new "data profiles" (late March/April): New data profiles will include ALL USGS data (legacy and new). Shortly after these profiles are released, we plan to update dataRetrieval so that these new profiles are the default. 
+When WQP gets new "data profiles" (April 2024): New data profiles will include ALL USGS data (legacy and new). Shortly after these profiles are released, we plan to update dataRetrieval so that these new profiles are the default. 
 
 # Known Dependencies
 
