--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+dataRetrieval 2.7.16
+===================
+* Removed the forced "empty returns" for WQP, since the WQP now has properly formatted empty returns.
+* Moved the column parsing to a dedicated function for WQP.
+
 dataRetrieval 2.7.15
 ===================
 * Update warning about upcoming changes to USGS water quality data.
