--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ dataRetrieval 2.7.16
 ===================
 * Removed the forced "empty returns" for WQP, since the WQP now has properly formatted empty returns.
 * Moved the column parsing to a dedicated function for WQP.
+* Took out zip option for WQP calls, they are not allowed on WQP anymore.
+
 
 dataRetrieval 2.7.15
 ===================
