--- a/vignettes/wqp_large_pull_script.Rmd
+++ b/vignettes/wqp_large_pull_script.Rmd
@@ -16,7 +16,7 @@ library(knitr)
 
 opts_chunk$set(
   echo=TRUE,
-  eval=TRUE,
+  eval=FALSE,
   fig.width = 7,
   fig.height = 5,
   warning = FALSE,
