First pass at beta

--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,8 @@ dataRetrieval 2.7.16
 * Removed the forced "empty returns" for WQP, since the WQP now has properly formatted empty returns.
 * Moved the column parsing to a dedicated function for WQP.
 * Took out zip option for WQP calls, they are not allowed on WQP anymore.
-
+* Deprecated getQuerySummary. Users should use readWQPsummary instead.
+* Added WQX 3.0 profiles
 
 dataRetrieval 2.7.15
 ===================
