--- a/vignettes/qwdata_changes.Rmd
+++ b/vignettes/qwdata_changes.Rmd
@@ -36,16 +36,43 @@ USGS discrete water samples data are undergoing modernization, and NWIS services
 For the latest news on USGS water quality data, see:
 [https://doi-usgs.github.io/dataRetrieval/articles/Status.html](https://doi-usgs.github.io/dataRetrieval/articles/Status.html). Learn more about the changes and where to find the new samples data in the [WDFN blog](https://waterdata.usgs.gov/blog/changes-to-sample-data/).
 
-**IMPORTANT** These recommendations will change as new WQP data profiles are released (expected late April 2024). The recommendations below assume WQP 3.0 profiles are not available. Once those are released, these recommendations will be updated.
+**IMPORTANT** These recommendations have been updated using WQX3.0 profiles. 
 
 What does this mean for `dataRetrieval` users? Eventually water quality data will ONLY be available from the [Water Quality Portal](https://www.waterqualitydata.us/) rather than the NWIS services. There are 3 major `dataRetrieval` functions that will be affected: `readNWISqw`, `whatNWISdata`, and `readNWISdata`. This vignette will describe the most common workflows conversions needed to update existing scripts. 
 
-This vignette is being provided well in advance of any breaking changes, and more information and guidance will be provided. If you need more help than is provided here, please reach out to gs-w-IOW_PO_team@usgs.gov
+# How to find more help
 
+This vignette is being provided in advance of any breaking changes, and more information and guidance will be provided. 
+
+These changes are big, and initially sound overwhelming. But in the end, they are thoughtful changes that will make understanding USGS water data more intuitive. Please reach out for questions and comments to: gs-w-IOW_PO_team@usgs.gov
+
+# WQX2 -> WQX3
+
+If you have already converted your workflow from NWIS to WQP, much of the hard work has been done! The final step of the process is to make sure workflows are using the most modern WQX3 formats. WQX stands for Water Quality Exchange. WQX2 is the format that has been historically available on the Water Quality Portal, WQX3 is the more modern format that all the data is being converted to.
+
+
+This is available as of `dataRetrieval` version 2.7.16. Starting with 2.7.16, all WQP functions default to the newer "WQX3" profiles if available. 
+
+Generally speaking, the following table ROUGHLY shows the conversions of WQX3 to WQX2 mappings:
+
+```{r echo=FALSE, eval=TRUE}
+schema <- readr::read_csv("schema_outbound_WQX3.0.csv")
+
+sub_schema <- schema |> 
+  select(WQX3 = FieldName3.0,
+         WQX2 = WqxV2.FieldName) |> 
+  filter(!is.na(WQX3))
+
+knitr::kable(sub_schema)
+
+```
+
+
+# NWIS -> WQX3
 
 ## `readNWISqw`
 
-Starting with version 2.7.9, users will notice a Warning message when using this function:
+Users will notice a Warning message when using this function:
 
 ```{r eval=FALSE}
 
@@ -56,13 +83,15 @@ nwisData <- readNWISqw(site_ids, parameterCd)
 
 ```
 Warning message:                                                                                               
-NWIS qw web services are being retired. Please see the vignette 
-'Changes to NWIS QW services' for more information. 
+WARNING: NWIS does not deliver
+new discrete water quality data or updates to existing data. 
+For additional details, see:
+https://doi-usgs.github.io/dataRetrieval/articles/Status.html
 ```
 
 Please don't ignore this warning, the function will eventually be *removed* from the `dataRetrieval` package.
 
-So...what do you do instead? The function you will need to move to is `readWQPqw`. First, you'll need to convert the USGS site ID's into something that the Water Quality Portal will accept. Luckily, that's a single line pasting a prefix "USGS-". Here's an example:
+So...what do you do instead? The function you will need to move to is `readWQPqw`. First, you'll need to convert the USGS site ID's into something that the Water Quality Portal will accept. Usually that's a single line pasting a prefix "USGS-". Here's an example:
 
 ```{r eval=FALSE}
 wqpData <- readWQPqw(paste0("USGS-", site_ids), parameterCd)
@@ -120,12 +149,9 @@ The same number of rows are returned (because at it's core, it IS the same data)
 ```{r}
 site_NWIS <- attr(nwisData, "siteInfo")
 site_WQP <- attr(wqpData, "siteInfo")
-
-param_NWIS <- attr(nwisData, "variableInfo")
-param_WQP <- attr(wqpData, "variableInfo")
 ```
 
-The next big task is figuring out which columns from the WQP output map to the original columns from the NWIS output. The vast majority of workflows will not need to completely re-engineer the WQP output back into the NWIS format. Instead, look at your workflow and determine what columns from the original NWIS output are needed to preserve the integrity of the workflow. 
+The next big task is figuring out which columns from the WQP output map to the original columns from the NWIS output. Look at your workflow and determine what columns from the original NWIS output are needed to preserve the integrity of the workflow. 
 
 Let's use the `dplyr` package to pull out the columns are used in this example workflow, and make sure both NWIS and WQP are ordered in the same way.
 
@@ -135,7 +161,7 @@ library(dplyr)
 nwisData_relavent <- nwisData %>%
   select(
     site_no, startDateTime, parm_cd,
-    hyd_cond_cd, remark_cd, result_va
+    remark_cd, result_va
   ) %>%
   arrange(startDateTime, parm_cd)
 
@@ -146,12 +172,12 @@ If we explore the output from WQP, we can try to find the columns that include t
 ```{r}
 wqpData_relavent <- wqpData %>%
   select(
-    site_no = MonitoringLocationIdentifier,
-    startDateTime = ActivityStartDateTime,
-    parm_cd = USGSPCode,
-    hyd_cond_cd = HydrologicCondition,
-    remark_cd = ResultDetectionConditionText,
-    result_va = ResultMeasureValue
+    site_no = Location_Identifier,
+    startDateTime = Activity_StartDateTime,
+    parm_cd = USGSpcode,
+    remark_cd = Result_ResultDetectionCondition,
+    result_va = Result_Measure,
+    detection_level = DetectionLimit_MeasureA
   ) %>%
   arrange(startDateTime, parm_cd)
 knitr::kable(head(wqpData_relavent))
@@ -178,17 +204,17 @@ censored_text <- c(
 
 wqpData_relavent <- wqpData %>%
   mutate(left_censored = grepl(paste(censored_text, collapse = "|"),
-    ResultDetectionConditionText,
+    Result_ResultDetectionCondition,
     ignore.case = TRUE
   )) %>%
   select(
-    site_no = MonitoringLocationIdentifier,
-    startDateTime = ActivityStartDateTime,
-    parm_cd = USGSPCode,
+    site_no = Location_Identifier,
+    startDateTime = Activity_StartDateTime,
+    parm_cd = USGSpcode,
     left_censored,
-    result_va = ResultMeasureValue,
-    detection_level = DetectionQuantitationLimitMeasure.MeasureValue,
-    dl_units = DetectionQuantitationLimitMeasure.MeasureUnitCode
+    result_va = Result_Measure,
+    detection_level = DetectionLimit_MeasureA,
+    dl_units = DetectionLimit_MeasureUnitA
   ) %>%
   arrange(startDateTime, parm_cd)
 
@@ -197,75 +223,13 @@ knitr::kable(head(wqpData_relavent))
 
 ### NWIS codes
 
-Another difference that is going to require some thoughtful decisions is how to interpret additional NWIS codes. They will now be descriptive text. Columns such as hyd_cond_cd, samp_type_cd, hyd_event_cd, medium_cd will now all be reported with descriptive words rather than single letters or numbers. It will be the responsibility of the user to consider the best way to deal with these changes. 
-
-To take full advantage of the Water Quality Portal, it would be a good idea to begin to move away from USGS parameter codes. While USGS data includes a parameter code, there are many other water quality data sources within the Water Quality Portal. To compare USGS and non-USGS data, you'll need to compare data that has at least the same characteristic name and measured units. There are many other fields that may be required to assure you are comparing apples-to-apples. For example, "ResultSampleFractionText" is important in many measured parameters.
-
-The measurement units are found in EITHER the "ResultMeasure.MeasureUnitCode" column, OR the "DetectionQuantitationLimitMeasure.MeasureUnitCode" column, depending on if the individual measurement is censored or not.
-
-
-```{r}
-wqpData_relavent_codes <- wqpData %>%
-  mutate(units = ifelse(is.na(ResultMeasure.MeasureUnitCode),
-    DetectionQuantitationLimitMeasure.MeasureUnitCode,
-    ResultMeasure.MeasureUnitCode
-  )) %>%
-  select(
-    parm_cd = USGSPCode,
-    CharacteristicName, ResultSampleFractionText,
-    units
-  ) %>%
-  distinct()
-
-knitr::kable(wqpData_relavent_codes)
-```
-
-If there are USGS codes that you are using in your analysis, begin to move away from those codes, and move to the text. In the data we are looking at here:
-
-```{r}
-wqpData_with_codes <- wqpData %>%
-  select(
-    HydrologicCondition, HydrologicEvent,
-    ActivityTypeCode, ActivityMediaName
-  ) %>%
-  distinct()
-
-knitr::kable(head(wqpData_with_codes))
-```
-
-To convert the codes found in this example:
-
-```{r codes, echo=FALSE}
-df <- data.frame(
-  NWIS = c(
-    "samp_type_cd = 9",
-    "hyd_cond_cd = 9",
-    "hyd_cond_cd = 5",
-    "hyd_cond_cd = 8",
-    "medium_cd = 'WS'",
-    "hyd_event_cd = 'B'",
-    "hyd_event_cd = 'A'",
-    "hyd_event_cd = 9"
-  ),
-  WQP = c(
-    "ActivityTypeCode = 'Sample-Routine'",
-    "HydrologicCondition = 'Stable, normal stage'",
-    "HydrologicCondition = 'Falling stage'",
-    "HydrologicCondition = 'Rising stage'",
-    "ActivityMediaName = 'Water'",
-    "HydrologicEvent = 'Under ice cover'",
-    "HydrologicEvent = 'Spring breakup'",
-    "HydrologicEvent = 'Routine sample'"
-  )
-)
-knitr::kable(df)
-```
+Another difference that is going to require some thoughtful decisions is how to interpret additional NWIS codes. They will now be descriptive text. Columns such as samp_type_cd and medium_cd will now all be reported with descriptive words rather than single letters or numbers. It will be the responsibility of the user to consider the best way to deal with these changes. 
 
 If you use the `readNWISqw` function, you WILL need to adjust your workflows, and you may find there are more codes you will need to account for. Hopefully this section helped get you started. It does not include every scenario, so you may find more columns or codes or other conditions you need to account for.  
 
 # whatNWISdata
 
-This function will continue to work for any service except "qw" (water quality discrete data). "qw" results will no longer be returned. This function is used to discover what water quality data is available.
+This function will continue to work for any service except "qw" (water quality discrete data). HOWEVER, "qw" results will no longer be returned. This function is used to discover what water quality data is available.
 
 The function to replace this functionality is `whatWQPdata`:
 
@@ -277,9 +241,10 @@ whatNWIS <- whatNWISdata(
 ```
 
 ```
-Warning message:                                                                                               
-NWIS qw web services are being retired. Please see the vignette 
-'Changes to NWIS QW services' for more information.
+WARNING: NWIS does not deliver
+new discrete water quality data or updates to existing data. 
+For additional details, see:
+https://doi-usgs.github.io/dataRetrieval/articles/Status.html
 ```
 
 ```{r whatdatanew, eval=FALSE}
@@ -309,17 +274,15 @@ qwData <- readNWISdata(
 ```
 
 ```
-Warning message:
-NWIS qw web services are being retired. Please see the vignette 
-'Changes to NWIS QW services' for more information. 
+Warning: NWIS qw web services are being retired.
+Please see vignette('qwdata_changes', package = 'dataRetrieval')
+for more information.
 ```
 This is not an especially common `dataRetrieval` workflow, so there are not a lot of details here. Please reach out if more information is needed to update your workflows.
 
 See `?readWQPdata` to see all the ways to query data in the Water Quality Portal. Use the suggestions above to convert the output of the `readWQPdata` function to convert the WQP output to what is important for your workflow.
 
-# How to find more help
 
-These changes are big, and initially sound overwhelming. But in the end, they are thoughtful changes that will make understanding USGS water data more intuitive. Please reach out for questions and comments to: gs-w-IOW_PO_team@usgs.gov
 
 # Disclaimer
 
